--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Pixmaps:
 
 You can change it. Just replace pixmaps from any theme. (default icons path: /usr/share/icons/$theme/24x24/status/)
 
-For use gtk theme icons, open "Preferences" and change "Use gnome icons", and restart gvolwheel  
+For use gtk theme icons, open "Preferences" and change "Use gnome icons"
 
 ---
 Dmitry Kosenkov <junker@front.ru>
