--- a/README
+++ b/README
@@ -4,6 +4,13 @@ Pixmaps:
 ($prefix)/share/pixmaps/gvolwheel/audio-volume-high.png
 ($prefix)/share/pixmaps/gvolwheel/audio-volume-muted.png
 
+Own pixmaps:
+~/.config/gvolwheel/audio-volume-low.png
+~/.config/gvolwheel/audio-volume-medium.png
+~/.config/gvolwheel/audio-volume-high.png
+~/.config/gvolwheel/audio-volume-muted.png
+
+
 You can change it. Just replace pixmaps from any theme. (default icons path: /usr/share/icons/$theme/24x24/status/)
 
 For use gtk theme icons, open "Preferences" and change "Use gnome icons"
