--- a/src/.deps/eggtrayicon.Po
+++ b/src/.deps/eggtrayicon.Po
@@ -2,7 +2,7 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/features.h /usr/include/sys/cdefs.h \
  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
  /usr/include/gnu/stubs-32.h \
- /usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include/stddef.h \
+ /usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include/stddef.h \
  /usr/include/xlocale.h /usr/include/bits/string.h \
  /usr/include/bits/string2.h /usr/include/endian.h \
  /usr/include/bits/endian.h /usr/include/bits/byteswap.h \
@@ -17,28 +17,31 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/glib/galloca.h /usr/include/glib-2.0/glib/gtypes.h \
  /usr/lib/glib-2.0/include/glibconfig.h \
  /usr/include/glib-2.0/glib/gmacros.h \
- /usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include-fixed/limits.h \
- /usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include-fixed/syslimits.h \
+ /usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include-fixed/limits.h \
+ /usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include-fixed/syslimits.h \
  /usr/include/limits.h /usr/include/bits/posix1_lim.h \
  /usr/include/bits/local_lim.h /usr/include/linux/limits.h \
  /usr/include/bits/posix2_lim.h \
- /usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include/float.h \
+ /usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include/float.h \
  /usr/include/glib-2.0/glib/garray.h \
  /usr/include/glib-2.0/glib/gasyncqueue.h \
  /usr/include/glib-2.0/glib/gthread.h /usr/include/glib-2.0/glib/gerror.h \
+ /usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include/stdarg.h \
  /usr/include/glib-2.0/glib/gquark.h /usr/include/glib-2.0/glib/gutils.h \
- /usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include/stdarg.h \
  /usr/include/glib-2.0/glib/gatomic.h \
  /usr/include/glib-2.0/glib/gbacktrace.h /usr/include/signal.h \
  /usr/include/bits/sigset.h /usr/include/bits/signum.h \
  /usr/include/time.h /usr/include/bits/siginfo.h \
  /usr/include/bits/sigaction.h /usr/include/bits/sigcontext.h \
  /usr/include/asm/sigcontext.h /usr/include/linux/types.h \
- /usr/include/asm/types.h /usr/include/asm-generic/int-ll64.h \
- /usr/include/linux/posix_types.h /usr/include/linux/stddef.h \
- /usr/include/asm/posix_types.h /usr/include/asm/posix_types_32.h \
- /usr/include/bits/sigstack.h /usr/include/bits/pthreadtypes.h \
- /usr/include/bits/sigthread.h /usr/include/glib-2.0/glib/gbase64.h \
+ /usr/include/asm/types.h /usr/include/asm-generic/types.h \
+ /usr/include/asm-generic/int-ll64.h /usr/include/asm/bitsperlong.h \
+ /usr/include/asm-generic/bitsperlong.h /usr/include/linux/posix_types.h \
+ /usr/include/linux/stddef.h /usr/include/asm/posix_types.h \
+ /usr/include/asm/posix_types_32.h /usr/include/bits/sigstack.h \
+ /usr/include/bits/pthreadtypes.h /usr/include/bits/sigthread.h \
+ /usr/include/glib-2.0/glib/gbase64.h \
+ /usr/include/glib-2.0/glib/gbitlock.h \
  /usr/include/glib-2.0/glib/gbookmarkfile.h /usr/include/bits/time.h \
  /usr/include/glib-2.0/glib/gcache.h /usr/include/glib-2.0/glib/glist.h \
  /usr/include/glib-2.0/glib/gmem.h /usr/include/glib-2.0/glib/gslice.h \
@@ -49,6 +52,7 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/glib/gdir.h \
  /usr/include/glib-2.0/glib/gfileutils.h \
  /usr/include/glib-2.0/glib/ghash.h /usr/include/glib-2.0/glib/ghook.h \
+ /usr/include/glib-2.0/glib/ghostutils.h \
  /usr/include/glib-2.0/glib/giochannel.h \
  /usr/include/glib-2.0/glib/gmain.h /usr/include/glib-2.0/glib/gpoll.h \
  /usr/include/glib-2.0/glib/gslist.h /usr/include/glib-2.0/glib/gstring.h \
@@ -70,6 +74,8 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/glib/gthreadpool.h \
  /usr/include/glib-2.0/glib/gtimer.h /usr/include/glib-2.0/glib/gtree.h \
  /usr/include/glib-2.0/glib/gurifuncs.h \
+ /usr/include/glib-2.0/glib/gvarianttype.h \
+ /usr/include/glib-2.0/glib/gvariant.h \
  /usr/include/glib-2.0/gobject/genums.h \
  /usr/include/glib-2.0/gobject/gobject.h \
  /usr/include/glib-2.0/gobject/gvalue.h \
@@ -85,6 +91,8 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/gobject/gvaluetypes.h \
  /usr/include/glib-2.0/gio/gappinfo.h \
  /usr/include/glib-2.0/gio/gasyncresult.h \
+ /usr/include/glib-2.0/gio/gasyncinitable.h \
+ /usr/include/glib-2.0/gio/ginitable.h \
  /usr/include/glib-2.0/gio/gbufferedinputstream.h \
  /usr/include/glib-2.0/gio/gfilterinputstream.h \
  /usr/include/glib-2.0/gio/ginputstream.h \
@@ -93,6 +101,10 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/gio/goutputstream.h \
  /usr/include/glib-2.0/gio/gcancellable.h \
  /usr/include/glib-2.0/gio/gcontenttype.h \
+ /usr/include/glib-2.0/gio/gconverter.h \
+ /usr/include/glib-2.0/gio/gconverterinputstream.h \
+ /usr/include/glib-2.0/gio/gconverteroutputstream.h \
+ /usr/include/glib-2.0/gio/gcharsetconverter.h \
  /usr/include/glib-2.0/gio/gdatainputstream.h \
  /usr/include/glib-2.0/gio/gdataoutputstream.h \
  /usr/include/glib-2.0/gio/gdrive.h \
@@ -107,10 +119,15 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/gio/gfilemonitor.h \
  /usr/include/glib-2.0/gio/gfilenamecompleter.h \
  /usr/include/glib-2.0/gio/gfileoutputstream.h \
+ /usr/include/glib-2.0/gio/ginetaddress.h \
+ /usr/include/glib-2.0/gio/ginetsocketaddress.h \
+ /usr/include/glib-2.0/gio/gsocketaddress.h \
  /usr/include/glib-2.0/gio/gioenumtypes.h \
  /usr/include/glib-2.0/gio/gioerror.h \
  /usr/include/glib-2.0/gio/giomodule.h /usr/include/glib-2.0/gmodule.h \
  /usr/include/glib-2.0/gio/gioscheduler.h \
+ /usr/include/glib-2.0/gio/giostream.h \
+ /usr/include/glib-2.0/gio/gfileiostream.h \
  /usr/include/glib-2.0/gio/gloadableicon.h \
  /usr/include/glib-2.0/gio/gmemoryinputstream.h \
  /usr/include/glib-2.0/gio/gmemoryoutputstream.h \
@@ -118,12 +135,28 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/glib-2.0/gio/gmountoperation.h \
  /usr/include/glib-2.0/gio/gnativevolumemonitor.h \
  /usr/include/glib-2.0/gio/gvolumemonitor.h \
+ /usr/include/glib-2.0/gio/gnetworkaddress.h \
+ /usr/include/glib-2.0/gio/gnetworkservice.h \
+ /usr/include/glib-2.0/gio/gresolver.h \
  /usr/include/glib-2.0/gio/gseekable.h \
  /usr/include/glib-2.0/gio/gsimpleasyncresult.h \
+ /usr/include/glib-2.0/gio/gsocket.h \
+ /usr/include/glib-2.0/gio/gsocketaddressenumerator.h \
+ /usr/include/glib-2.0/gio/gsocketclient.h \
+ /usr/include/glib-2.0/gio/gsocketconnectable.h \
+ /usr/include/glib-2.0/gio/gsocketconnection.h \
+ /usr/include/glib-2.0/gio/gsocketcontrolmessage.h \
+ /usr/include/glib-2.0/gio/gsocketlistener.h \
+ /usr/include/glib-2.0/gio/gsocketservice.h \
+ /usr/include/glib-2.0/gio/gtcpconnection.h \
+ /usr/include/glib-2.0/gio/gthreadedsocketservice.h \
+ /usr/include/glib-2.0/gio/gsrvtarget.h \
  /usr/include/glib-2.0/gio/gthemedicon.h /usr/include/glib-2.0/gio/gvfs.h \
- /usr/include/glib-2.0/gio/gvolume.h /usr/include/gtk-2.0/gdk/gdkscreen.h \
- /usr/include/cairo/cairo.h /usr/include/cairo/cairo-version.h \
- /usr/include/cairo/cairo-features.h \
+ /usr/include/glib-2.0/gio/gvolume.h \
+ /usr/include/glib-2.0/gio/gzlibcompressor.h \
+ /usr/include/glib-2.0/gio/gzlibdecompressor.h \
+ /usr/include/gtk-2.0/gdk/gdkscreen.h /usr/include/cairo/cairo.h \
+ /usr/include/cairo/cairo-version.h /usr/include/cairo/cairo-features.h \
  /usr/include/cairo/cairo-deprecated.h \
  /usr/include/gtk-2.0/gdk/gdktypes.h /usr/include/pango-1.0/pango/pango.h \
  /usr/include/pango-1.0/pango/pango-attributes.h \
@@ -212,11 +245,13 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/atk-1.0/atk/atknoopobject.h \
  /usr/include/atk-1.0/atk/atknoopobjectfactory.h \
  /usr/include/atk-1.0/atk/atkobjectfactory.h \
+ /usr/include/atk-1.0/atk/atkplug.h \
  /usr/include/atk-1.0/atk/atkregistry.h \
  /usr/include/atk-1.0/atk/atkobjectfactory.h \
  /usr/include/atk-1.0/atk/atkrelation.h \
  /usr/include/atk-1.0/atk/atkrelationset.h \
  /usr/include/atk-1.0/atk/atkselection.h \
+ /usr/include/atk-1.0/atk/atksocket.h \
  /usr/include/atk-1.0/atk/atkstateset.h \
  /usr/include/atk-1.0/atk/atkstreamablecontent.h \
  /usr/include/atk-1.0/atk/atktable.h /usr/include/atk-1.0/atk/atkmisc.h \
@@ -255,6 +290,7 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtkcellrendererpixbuf.h \
  /usr/include/gtk-2.0/gtk/gtkcellrendererprogress.h \
  /usr/include/gtk-2.0/gtk/gtkcellrendererspin.h \
+ /usr/include/gtk-2.0/gtk/gtkcellrendererspinner.h \
  /usr/include/gtk-2.0/gtk/gtkcellrenderertoggle.h \
  /usr/include/gtk-2.0/gtk/gtkcellview.h \
  /usr/include/gtk-2.0/gtk/gtkcheckbutton.h \
@@ -276,11 +312,11 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtkentry.h \
  /usr/include/gtk-2.0/gtk/gtkeditable.h \
  /usr/include/gtk-2.0/gtk/gtkimcontext.h \
+ /usr/include/gtk-2.0/gtk/gtkentrybuffer.h \
  /usr/include/gtk-2.0/gtk/gtkentrycompletion.h \
  /usr/include/gtk-2.0/gtk/gtkliststore.h \
  /usr/include/gtk-2.0/gtk/gtktreemodelfilter.h \
  /usr/include/gtk-2.0/gtk/gtkcomboboxentry.h \
- /usr/include/gtk-2.0/gtk/gtkcurve.h \
  /usr/include/gtk-2.0/gtk/gtkdrawingarea.h \
  /usr/include/gtk-2.0/gtk/gtkeventbox.h \
  /usr/include/gtk-2.0/gtk/gtkexpander.h \
@@ -292,8 +328,7 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtkfilechooserdialog.h \
  /usr/include/gtk-2.0/gtk/gtkfilechooserwidget.h \
  /usr/include/gtk-2.0/gtk/gtkfontbutton.h \
- /usr/include/gtk-2.0/gtk/gtkfontsel.h \
- /usr/include/gtk-2.0/gtk/gtkgamma.h /usr/include/gtk-2.0/gtk/gtkgc.h \
+ /usr/include/gtk-2.0/gtk/gtkfontsel.h /usr/include/gtk-2.0/gtk/gtkgc.h \
  /usr/include/gtk-2.0/gtk/gtkhandlebox.h \
  /usr/include/gtk-2.0/gtk/gtkhbbox.h /usr/include/gtk-2.0/gtk/gtkhpaned.h \
  /usr/include/gtk-2.0/gtk/gtkpaned.h /usr/include/gtk-2.0/gtk/gtkhruler.h \
@@ -311,7 +346,7 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtkimagemenuitem.h \
  /usr/include/gtk-2.0/gtk/gtkimcontextsimple.h \
  /usr/include/gtk-2.0/gtk/gtkimmulticontext.h \
- /usr/include/gtk-2.0/gtk/gtkinputdialog.h \
+ /usr/include/gtk-2.0/gtk/gtkinfobar.h \
  /usr/include/gtk-2.0/gtk/gtkinvisible.h \
  /usr/include/gtk-2.0/gtk/gtklayout.h \
  /usr/include/gtk-2.0/gtk/gtklinkbutton.h \
@@ -320,10 +355,12 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtktoolbutton.h \
  /usr/include/gtk-2.0/gtk/gtktoolitem.h \
  /usr/include/gtk-2.0/gtk/gtktooltips.h \
+ /usr/include/gtk-2.0/gtk/gtksizegroup.h \
  /usr/include/gtk-2.0/gtk/gtkmessagedialog.h \
  /usr/include/gtk-2.0/gtk/gtkmodules.h \
  /usr/include/gtk-2.0/gtk/gtkmountoperation.h \
  /usr/include/gtk-2.0/gtk/gtknotebook.h \
+ /usr/include/gtk-2.0/gtk/gtkoffscreenwindow.h \
  /usr/include/gtk-2.0/gtk/gtkorientable.h \
  /usr/include/gtk-2.0/gtk/gtkpagesetup.h \
  /usr/include/gtk-2.0/gtk/gtkpapersize.h \
@@ -354,8 +391,8 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtkseparatormenuitem.h \
  /usr/include/gtk-2.0/gtk/gtkseparatortoolitem.h \
  /usr/include/gtk-2.0/gtk/gtkshow.h \
- /usr/include/gtk-2.0/gtk/gtksizegroup.h \
  /usr/include/gtk-2.0/gtk/gtkspinbutton.h \
+ /usr/include/gtk-2.0/gtk/gtkspinner.h \
  /usr/include/gtk-2.0/gtk/gtkstatusbar.h \
  /usr/include/gtk-2.0/gtk/gtkstatusicon.h \
  /usr/include/gtk-2.0/gtk/gtkstock.h /usr/include/gtk-2.0/gtk/gtktable.h \
@@ -367,6 +404,8 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtktextview.h \
  /usr/include/gtk-2.0/gtk/gtktoolbar.h \
  /usr/include/gtk-2.0/gtk/gtkpixmap.h \
+ /usr/include/gtk-2.0/gtk/gtktoolitemgroup.h \
+ /usr/include/gtk-2.0/gtk/gtktoolpalette.h \
  /usr/include/gtk-2.0/gtk/gtktoolshell.h \
  /usr/include/gtk-2.0/gtk/gtktestutils.h \
  /usr/include/gtk-2.0/gtk/gtktreednd.h \
@@ -384,8 +423,10 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
  /usr/include/gtk-2.0/gtk/gtktext.h /usr/include/gtk-2.0/gtk/gtktree.h \
  /usr/include/gtk-2.0/gtk/gtktreeitem.h \
  /usr/include/gtk-2.0/gtk/gtkclist.h /usr/include/gtk-2.0/gtk/gtkcombo.h \
- /usr/include/gtk-2.0/gtk/gtkctree.h \
+ /usr/include/gtk-2.0/gtk/gtkctree.h /usr/include/gtk-2.0/gtk/gtkcurve.h \
  /usr/include/gtk-2.0/gtk/gtkfilesel.h \
+ /usr/include/gtk-2.0/gtk/gtkgamma.h \
+ /usr/include/gtk-2.0/gtk/gtkinputdialog.h \
  /usr/include/gtk-2.0/gtk/gtkitemfactory.h \
  /usr/include/gtk-2.0/gtk/gtklist.h \
  /usr/include/gtk-2.0/gtk/gtklistitem.h \
@@ -415,7 +456,7 @@ eggtrayicon.o: eggtrayicon.c ../config.h /usr/include/string.h \
 
 /usr/include/gnu/stubs-32.h:
 
-/usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include/stddef.h:
+/usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include/stddef.h:
 
 /usr/include/xlocale.h:
 
@@ -465,9 +506,9 @@ eggtrayicon.h:
 
 /usr/include/glib-2.0/glib/gmacros.h:
 
-/usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include-fixed/limits.h:
+/usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include-fixed/limits.h:
 
-/usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include-fixed/syslimits.h:
+/usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include-fixed/syslimits.h:
 
 /usr/include/limits.h:
 
@@ -479,7 +520,7 @@ eggtrayicon.h:
 
 /usr/include/bits/posix2_lim.h:
 
-/usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include/float.h:
+/usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include/float.h:
 
 /usr/include/glib-2.0/glib/garray.h:
 
@@ -489,11 +530,11 @@ eggtrayicon.h:
 
 /usr/include/glib-2.0/glib/gerror.h:
 
+/usr/lib/gcc/i686-pc-linux-gnu/4.4.3/include/stdarg.h:
+
 /usr/include/glib-2.0/glib/gquark.h:
 
 /usr/include/glib-2.0/glib/gutils.h:
-
-/usr/lib/gcc/i686-pc-linux-gnu/4.4.1/include/stdarg.h:
 
 /usr/include/glib-2.0/glib/gatomic.h:
 
@@ -519,7 +560,13 @@ eggtrayicon.h:
 
 /usr/include/asm/types.h:
 
+/usr/include/asm-generic/types.h:
+
 /usr/include/asm-generic/int-ll64.h:
+
+/usr/include/asm/bitsperlong.h:
+
+/usr/include/asm-generic/bitsperlong.h:
 
 /usr/include/linux/posix_types.h:
 
@@ -536,6 +583,8 @@ eggtrayicon.h:
 /usr/include/bits/sigthread.h:
 
 /usr/include/glib-2.0/glib/gbase64.h:
+
+/usr/include/glib-2.0/glib/gbitlock.h:
 
 /usr/include/glib-2.0/glib/gbookmarkfile.h:
 
@@ -566,6 +615,8 @@ eggtrayicon.h:
 /usr/include/glib-2.0/glib/ghash.h:
 
 /usr/include/glib-2.0/glib/ghook.h:
+
+/usr/include/glib-2.0/glib/ghostutils.h:
 
 /usr/include/glib-2.0/glib/giochannel.h:
 
@@ -625,6 +676,10 @@ eggtrayicon.h:
 
 /usr/include/glib-2.0/glib/gurifuncs.h:
 
+/usr/include/glib-2.0/glib/gvarianttype.h:
+
+/usr/include/glib-2.0/glib/gvariant.h:
+
 /usr/include/glib-2.0/gobject/genums.h:
 
 /usr/include/glib-2.0/gobject/gobject.h:
@@ -655,6 +710,10 @@ eggtrayicon.h:
 
 /usr/include/glib-2.0/gio/gasyncresult.h:
 
+/usr/include/glib-2.0/gio/gasyncinitable.h:
+
+/usr/include/glib-2.0/gio/ginitable.h:
+
 /usr/include/glib-2.0/gio/gbufferedinputstream.h:
 
 /usr/include/glib-2.0/gio/gfilterinputstream.h:
@@ -670,6 +729,14 @@ eggtrayicon.h:
 /usr/include/glib-2.0/gio/gcancellable.h:
 
 /usr/include/glib-2.0/gio/gcontenttype.h:
+
+/usr/include/glib-2.0/gio/gconverter.h:
+
+/usr/include/glib-2.0/gio/gconverterinputstream.h:
+
+/usr/include/glib-2.0/gio/gconverteroutputstream.h:
+
+/usr/include/glib-2.0/gio/gcharsetconverter.h:
 
 /usr/include/glib-2.0/gio/gdatainputstream.h:
 
@@ -701,6 +768,12 @@ eggtrayicon.h:
 
 /usr/include/glib-2.0/gio/gfileoutputstream.h:
 
+/usr/include/glib-2.0/gio/ginetaddress.h:
+
+/usr/include/glib-2.0/gio/ginetsocketaddress.h:
+
+/usr/include/glib-2.0/gio/gsocketaddress.h:
+
 /usr/include/glib-2.0/gio/gioenumtypes.h:
 
 /usr/include/glib-2.0/gio/gioerror.h:
@@ -710,6 +783,10 @@ eggtrayicon.h:
 /usr/include/glib-2.0/gmodule.h:
 
 /usr/include/glib-2.0/gio/gioscheduler.h:
+
+/usr/include/glib-2.0/gio/giostream.h:
+
+/usr/include/glib-2.0/gio/gfileiostream.h:
 
 /usr/include/glib-2.0/gio/gloadableicon.h:
 
@@ -725,15 +802,47 @@ eggtrayicon.h:
 
 /usr/include/glib-2.0/gio/gvolumemonitor.h:
 
+/usr/include/glib-2.0/gio/gnetworkaddress.h:
+
+/usr/include/glib-2.0/gio/gnetworkservice.h:
+
+/usr/include/glib-2.0/gio/gresolver.h:
+
 /usr/include/glib-2.0/gio/gseekable.h:
 
 /usr/include/glib-2.0/gio/gsimpleasyncresult.h:
+
+/usr/include/glib-2.0/gio/gsocket.h:
+
+/usr/include/glib-2.0/gio/gsocketaddressenumerator.h:
+
+/usr/include/glib-2.0/gio/gsocketclient.h:
+
+/usr/include/glib-2.0/gio/gsocketconnectable.h:
+
+/usr/include/glib-2.0/gio/gsocketconnection.h:
+
+/usr/include/glib-2.0/gio/gsocketcontrolmessage.h:
+
+/usr/include/glib-2.0/gio/gsocketlistener.h:
+
+/usr/include/glib-2.0/gio/gsocketservice.h:
+
+/usr/include/glib-2.0/gio/gtcpconnection.h:
+
+/usr/include/glib-2.0/gio/gthreadedsocketservice.h:
+
+/usr/include/glib-2.0/gio/gsrvtarget.h:
 
 /usr/include/glib-2.0/gio/gthemedicon.h:
 
 /usr/include/glib-2.0/gio/gvfs.h:
 
 /usr/include/glib-2.0/gio/gvolume.h:
+
+/usr/include/glib-2.0/gio/gzlibcompressor.h:
+
+/usr/include/glib-2.0/gio/gzlibdecompressor.h:
 
 /usr/include/gtk-2.0/gdk/gdkscreen.h:
 
@@ -949,6 +1058,8 @@ eggtrayicon.h:
 
 /usr/include/atk-1.0/atk/atkobjectfactory.h:
 
+/usr/include/atk-1.0/atk/atkplug.h:
+
 /usr/include/atk-1.0/atk/atkregistry.h:
 
 /usr/include/atk-1.0/atk/atkobjectfactory.h:
@@ -958,6 +1069,8 @@ eggtrayicon.h:
 /usr/include/atk-1.0/atk/atkrelationset.h:
 
 /usr/include/atk-1.0/atk/atkselection.h:
+
+/usr/include/atk-1.0/atk/atksocket.h:
 
 /usr/include/atk-1.0/atk/atkstateset.h:
 
@@ -1043,6 +1156,8 @@ eggtrayicon.h:
 
 /usr/include/gtk-2.0/gtk/gtkcellrendererspin.h:
 
+/usr/include/gtk-2.0/gtk/gtkcellrendererspinner.h:
+
 /usr/include/gtk-2.0/gtk/gtkcellrenderertoggle.h:
 
 /usr/include/gtk-2.0/gtk/gtkcellview.h:
@@ -1087,6 +1202,8 @@ eggtrayicon.h:
 
 /usr/include/gtk-2.0/gtk/gtkimcontext.h:
 
+/usr/include/gtk-2.0/gtk/gtkentrybuffer.h:
+
 /usr/include/gtk-2.0/gtk/gtkentrycompletion.h:
 
 /usr/include/gtk-2.0/gtk/gtkliststore.h:
@@ -1094,8 +1211,6 @@ eggtrayicon.h:
 /usr/include/gtk-2.0/gtk/gtktreemodelfilter.h:
 
 /usr/include/gtk-2.0/gtk/gtkcomboboxentry.h:
-
-/usr/include/gtk-2.0/gtk/gtkcurve.h:
 
 /usr/include/gtk-2.0/gtk/gtkdrawingarea.h:
 
@@ -1120,8 +1235,6 @@ eggtrayicon.h:
 /usr/include/gtk-2.0/gtk/gtkfontbutton.h:
 
 /usr/include/gtk-2.0/gtk/gtkfontsel.h:
-
-/usr/include/gtk-2.0/gtk/gtkgamma.h:
 
 /usr/include/gtk-2.0/gtk/gtkgc.h:
 
@@ -1167,7 +1280,7 @@ eggtrayicon.h:
 
 /usr/include/gtk-2.0/gtk/gtkimmulticontext.h:
 
-/usr/include/gtk-2.0/gtk/gtkinputdialog.h:
+/usr/include/gtk-2.0/gtk/gtkinfobar.h:
 
 /usr/include/gtk-2.0/gtk/gtkinvisible.h:
 
@@ -1187,6 +1300,8 @@ eggtrayicon.h:
 
 /usr/include/gtk-2.0/gtk/gtktooltips.h:
 
+/usr/include/gtk-2.0/gtk/gtksizegroup.h:
+
 /usr/include/gtk-2.0/gtk/gtkmessagedialog.h:
 
 /usr/include/gtk-2.0/gtk/gtkmodules.h:
@@ -1194,6 +1309,8 @@ eggtrayicon.h:
 /usr/include/gtk-2.0/gtk/gtkmountoperation.h:
 
 /usr/include/gtk-2.0/gtk/gtknotebook.h:
+
+/usr/include/gtk-2.0/gtk/gtkoffscreenwindow.h:
 
 /usr/include/gtk-2.0/gtk/gtkorientable.h:
 
@@ -1257,9 +1374,9 @@ eggtrayicon.h:
 
 /usr/include/gtk-2.0/gtk/gtkshow.h:
 
-/usr/include/gtk-2.0/gtk/gtksizegroup.h:
-
 /usr/include/gtk-2.0/gtk/gtkspinbutton.h:
+
+/usr/include/gtk-2.0/gtk/gtkspinner.h:
 
 /usr/include/gtk-2.0/gtk/gtkstatusbar.h:
 
@@ -1284,6 +1401,10 @@ eggtrayicon.h:
 /usr/include/gtk-2.0/gtk/gtktoolbar.h:
 
 /usr/include/gtk-2.0/gtk/gtkpixmap.h:
+
+/usr/include/gtk-2.0/gtk/gtktoolitemgroup.h:
+
+/usr/include/gtk-2.0/gtk/gtktoolpalette.h:
 
 /usr/include/gtk-2.0/gtk/gtktoolshell.h:
 
@@ -1325,7 +1446,13 @@ eggtrayicon.h:
 
 /usr/include/gtk-2.0/gtk/gtkctree.h:
 
+/usr/include/gtk-2.0/gtk/gtkcurve.h:
+
 /usr/include/gtk-2.0/gtk/gtkfilesel.h:
+
+/usr/include/gtk-2.0/gtk/gtkgamma.h:
+
+/usr/include/gtk-2.0/gtk/gtkinputdialog.h:
 
 /usr/include/gtk-2.0/gtk/gtkitemfactory.h:
 
